Add read-more component for text fields

--- a/src/ggrc/assets/mustache/base_objects/notes.mustache
+++ b/src/ggrc/assets/mustache/base_objects/notes.mustache
@@ -11,7 +11,7 @@
       <div data-test-id="title_notes_ef5bc3a71e88" class="span12">
         <h6>Notes</h6>
         <div data-test-id="title_notes_content_ef5bc3a71e88" class="rtf-block">
-          {{{firstnonempty notes '<span class="empty-message">None</span>'}}}
+          <read-more {text}="notes"></read-more>
         </div>
       </div>
     </div>
