--- a/src/ggrc/assets/mustache/issues/remediation_plan.mustache
+++ b/src/ggrc/assets/mustache/issues/remediation_plan.mustache
@@ -9,7 +9,7 @@
         <div class="span12">
             <h6>Remediation Plan</h6>
             <div class="rtf-block">
-                {{{firstnonempty test_plan '<span class="empty-message">None</span>'}}}
+              <read-more {text}="test_plan"></read-more>
             </div>
         </div>
     </div>
