--- a/src/ggrc_risk_assessments/assets/mustache/risk_assessments/info.mustache
+++ b/src/ggrc_risk_assessments/assets/mustache/risk_assessments/info.mustache
@@ -19,7 +19,7 @@
       <div class="span12">
         <h6>Notes</h6>
         <div class="rtf-block">
-          {{{firstnonempty instance.notes '<span class="empty-message">None</span>'}}}
+          <read-more {text}="instance.notes"></read-more>
         </div>
       </div>
     </div>
