--- a/src/ggrc_workflows/assets/mustache/cycle_task_groups/info.mustache
+++ b/src/ggrc_workflows/assets/mustache/cycle_task_groups/info.mustache
@@ -17,7 +17,7 @@
         <div class="span12">
           <h6>{{instance.class.title_singular}} description</h6>
           <div class="rtf-block">
-            {{{firstnonempty instance.description '<span class="empty-message">None</span>'}}}
+            <read-more {text}="instance.description"></read-more>
           </div>
         </div>
       </div>
