--- a/src/ggrc/assets/mustache/audits/info.mustache
+++ b/src/ggrc/assets/mustache/audits/info.mustache
@@ -37,7 +37,7 @@
         <div class="span12">
           <h6>Description</h6>
           <div class="rtf-block">
-            {{{firstnonempty instance.description '<span class="empty-message">None</span>'}}}
+            <read-more {text}="instance.description"></read-more>
           </div>
         </div>
       </div>
