--- a/src/ggrc/assets/mustache/base_objects/description.mustache
+++ b/src/ggrc/assets/mustache/base_objects/description.mustache
@@ -9,7 +9,7 @@
     <div data-test-id="title_description_7a906d2e" class="span12">
       <h6>Description</h6>
       <div data-test-id="title_description_content_7a906d2e" class="rtf-block">
-        {{{firstnonempty description '<span class="empty-message">None</span>'}}}
+        <read-more {text}="description"></read-more>
       </div>
     </div>
   </div>
