--- a/src/ggrc/assets/mustache/base_objects/test_plan.mustache
+++ b/src/ggrc/assets/mustache/base_objects/test_plan.mustache
@@ -11,7 +11,7 @@
       <div class="span12">
         <h6>Test Plan</h6>
         <div class="rtf-block">
-          {{{firstnonempty test_plan '<span class="empty-message">None</span>'}}}
+          <read-more {text}="test_plan"></read-more>
         </div>
       </div>
     </div>
