--- a/src/ggrc_workflows/assets/mustache/cycles/info.mustache
+++ b/src/ggrc_workflows/assets/mustache/cycles/info.mustache
@@ -44,7 +44,7 @@
       <div class="span12">
         <h6>Description</h6>
         <div class="rtf-block">
-          <p>{{{firstnonempty instance.description '<span class="empty-message">None</span>'}}}</p>
+          <read-more {text}="instance.description"></read-more>
         </div>
       </div>
     </div>
