Remake read-more component

--- a/src/ggrc/assets/mustache/assessments/modal_content.mustache
+++ b/src/ggrc/assets/mustache/assessments/modal_content.mustache
@@ -121,7 +121,7 @@
                     <div class="modal-mapped-objects-item__details">
                       <business-object-list-item {instance}="{.}">
                         <div class="description">
-                          <read-more {text}="itemData.description" max-text-length="90"></read-more>
+                          <read-more {text}="itemData.description" max-lines-number="1"></read-more>
                         </div>
                       </business-object-list-item>
                     </div>
