--- a/src/ggrc/assets/mustache/components/auto-save-form/auto-save-form-field-view.mustache
+++ b/src/ggrc/assets/mustache/components/auto-save-form/auto-save-form-field-view.mustache
@@ -5,9 +5,9 @@
 
 {{#switch type}}
   {{#case 'input'}}
-    <text-form-field-view
+    <rich-text-form-field-view
       {value}="value"
-    ></text-form-field-view>
+    ></rich-text-form-field-view>
   {{/case}}
   {{#case 'text'}}
     <rich-text-form-field-view
