--- a/src/ggrc/assets/mustache/components/assessment/mapped-objects/mapped-controls.mustache
+++ b/src/ggrc/assets/mustache/components/assessment/mapped-objects/mapped-controls.mustache
@@ -5,7 +5,7 @@
 <object-list {(selected-item)}="selectedItem" {items}="mappedItems">
     <business-object-list-item {instance}="instance">
         <div class="description">
-            <read-more {text}="itemData.description" max-text-length="90"></read-more>
+            <read-more {text}="itemData.description" max-lines-number="1"></read-more>
         </div>
     </business-object-list-item>
 </object-list>
