--- a/src/ggrc/assets/mustache/components/related-objects/related-issues.mustache
+++ b/src/ggrc/assets/mustache/components/related-objects/related-issues.mustache
@@ -27,7 +27,7 @@ Licensed under http://www.apache.org/licenses/LICENSE-2.0 <see LICENSE file>
                     </a>
                 </div>
                 <div class="flex-size-3">
-                    <read-more {text}="instance.description"></read-more>
+                    <read-more {text}="instance.description" max-lines-number="2"></read-more>
                 </div>
             </div>
         </object-list>
