--- a/src/ggrc/assets/stylesheets/components/read-more/_read-more.scss
+++ b/src/ggrc/assets/stylesheets/components/read-more/_read-more.scss
@@ -4,42 +4,47 @@ read-more {
   transition: height 0.1s ease;
   position: relative;
   display: block;
+  overflow: hidden;
 
-  .read-more__body {
-    overflow: hidden;
-    transition: display 0.1s ease, height 0.1s ease, max-height 0.3s ease;
-    padding: 0;
-    box-sizing: border-box;
-    word-break: break-word;
-
-    .read-more__body-content {
-      line-height: 18px;
-      position: relative;
-
-      * {
-        margin: 0;
-        padding: 0;
-      }
+  @for $i from 1 through 10 {
+    .ellipsis-truncation-#{$i} {
+      display: -webkit-box !important;
+      text-overflow: ellipsis;
+      -webkit-box-orient: vertical;
+      -webkit-line-clamp: $i;
+      margin-bottom: 5px !important;
     }
   }
 
+  .read-more__body {
+    display: block;
+    margin-bottom: 20px;
+    overflow: hidden;
+    box-sizing: border-box;
+    word-break: break-word;
+  }
+
+  &:hover .read-more__controls{
+    visibility: visible;
+    opacity: 1;
+  }
+
   .read-more__controls {
-    padding: 0 8px;
-    height: 22px;
-    line-height: 22px;
-    margin: 0;
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    background-color: $white;
+    line-height: 20px;
     text-align: right;
-    position: relative;
+    transition: opacity 600ms, visibility 600ms;
+    box-shadow: -6px 0px 18px 7px $white;
 
     .read-more__btn {
-      padding: 2px 0;
-      box-sizing: border-box;
-      text-align: right;
-      min-width: 78px;
-      cursor: pointer;
-      line-height: 18px;
       display: inline-block;
-      transition: display 0.3s ease;
+      box-sizing: border-box;
+      cursor: pointer;
 
       &:hover {
         text-decoration: none;
@@ -48,11 +53,37 @@ read-more {
   }
 }
 
-read-more-text-overflow {
-  box-sizing: border-box;
-  width: 100%;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  line-height: 18px;
-  font-size: 13px;
+.mapped-snapshot-item {
+  read-more {
+    .read-more__controls {
+      box-shadow: -6px 0px 18px 7px $snapshotBgnd;
+
+      .read-more__btn {
+        background-color: $snapshotBgnd;
+      }
+    }
+  }
+}
+.mapped-snapshot-item:hover {
+  read-more {
+    .read-more__controls {
+      box-shadow: -6px 0px 18px 7px $shapshotBorder;
+
+      .read-more__btn {
+        background-color: $shapshotBorder;
+      }
+    }
+  }
+}
+
+.assessment-controls {
+  read-more {
+    .read-more__controls {
+      box-shadow: -6px 0px 18px 7px $light-grey-background;
+
+      .read-more__btn {
+        background-color: $light-grey-background;
+      }
+    }
+  }
 }
