Fix 'text' propery of read-more component
Update styles of read-more link

--- a/src/ggrc/assets/mustache/components/read-more/read-more.mustache
+++ b/src/ggrc/assets/mustache/components/read-more/read-more.mustache
@@ -5,7 +5,7 @@
 <div class="read-more">
   {{#if text}}
       <div class="read-more__body {{cssClass}}">
-        {{text}}
+        {{{text}}}
       </div>
       {{#if overflowing}}
         <div class="read-more__controls">
