--- a/src/ggrc/assets/mustache/base_objects/info_header.mustache
+++ b/src/ggrc/assets/mustache/base_objects/info_header.mustache
@@ -27,23 +27,16 @@
             </li>
 
             {{#is_info_pin}}
-              {{#is page_instance.type "Issue"}}
-                <issue-unmap
-                  {issue-instance}="page_instance"
-                  {target}="instance">
-                    <li class="border">
-                      <span class="unmap-link">
-                        <i class="fa fa-ban"></i>Unmap from Issue
-                      </span>
-                    </li>
-                </issue-unmap>
-              {{else}}
-                {{#is_allowed_to_map page_instance instance}}
-                  {{^options.is_in_selector}}
-                    {{> /static/mustache/base_objects/unmap.mustache}}
-                  {{/options}}
-                {{/is_allowed_to_map}}
-              {{/is}}
+              <issue-unmap-dropdown-item
+                {page_instance}="page_instance"
+                {instance}="instance"
+                {options}="options">
+                  {{#is_allowed_to_map page_instance instance}}
+                    {{^options.is_in_selector}}
+                      {{> /static/mustache/base_objects/unmap.mustache}}
+                    {{/options}}
+                  {{/is_allowed_to_map}}
+              </issue-unmap-dropdown-item>
               {{#if instance.viewLink}}
                 {{#is_allowed "view_object_page" instance}}
                   <li>
