--- a/src/ggrc/assets/stylesheets/components/issue/_issue-unmap.scss
+++ b/src/ggrc/assets/stylesheets/components/issue/_issue-unmap.scss
@@ -3,7 +3,7 @@
  * Licensed under http://www.apache.org/licenses/LICENSE-2.0 <see LICENSE file>
  */
 
-issue-unmap {
+issue-unmap-dropdown-item {
   .unmap-link {
     color: black !important;
 
